fix export buttons in dark mode

--- a/src/assets/css/element/element-button.css
+++ b/src/assets/css/element/element-button.css
@@ -209,17 +209,6 @@ textarea.Input {
   --button-invert-color: theme(colors.white);
 }
 
-.Button--black {
-  /* --button-color: var(--scheme-bg);
-  --button-bg-color: var(--scheme-text);
-  --button-invert-color: var(--scheme-text); */
-  --button-color: theme(colors.white);
-  --button-bg-color: theme(colors.black);
-  --button-border-color: theme(colors.black);
-  --button-box-shadow-color: theme(colors.black);
-  --button-invert-color: theme(colors.black);
-}
-
 .ButtonComplex .Button--outline,
 .Button--outline,
 .Button--invisible {
